--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -11,8 +11,8 @@
     "firebase": "^9.9.4",
     "next": "latest",
     "nprogress": "^0.2.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
@@ -22,7 +22,8 @@
     "@tailwindcss/typography": "^0.5.4",
     "@types/node": "17.0.35",
     "@types/nprogress": "^0.2.0",
-    "@types/react-dom": "18.0.5",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.7",
     "config": "*",
     "eslint": "8.23.0",
