--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   ],
   "scripts": {
     "build": "turbo run build",
+    "build:lms": "turbo run build --filter=lms",
     "clean": "turbo run clean --parallel && rimraf node_modules",
     "clean:cache": "turbo run clean:cache && rimraf node_modules/.cache",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "start": "turbo run start --parallel",
+    "start:lms": "turbo run start --filter=lms",
     "prepare": "husky install"
   },
   "devDependencies": {
