--- a/turbo.json
+++ b/turbo.json
@@ -9,8 +9,13 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**"]
     },
+    "build:admin": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**", ".next/**"]
+    },
     "start": { "outputs": [] },
     "start:lms": { "outputs": [] },
+    "start:admin": { "outputs": [] },
     "lint": { "outputs": [] },
     "dev": { "cache": false },
     "clean": { "cache": false }
