--- a/apps/lms/package.json
+++ b/apps/lms/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3000",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.28.3",
+    "@azure/msal-react": "^1.4.7",
     "firebase": "^9.9.4",
     "next": "latest",
     "next-seo": "^5.5.0",
