--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,13 +10,15 @@
   "devDependencies": {
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.7",
     "eslint": "^7.32.0",
     "config": "*",
-    "react": "^18.2.0",
-    "tsconfig": "*",
-    "typescript": "^4.5.2",
-    "autoprefixer": "^10.4.7",
+    "next": "latest",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.2"
+    "react": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "tailwindcss": "^3.1.2",
+    "tsconfig": "*",
+    "typescript": "^4.5.2"
   }
 }
