--- a/apps/lms/package.json
+++ b/apps/lms/package.json
@@ -20,6 +20,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
+    "react-tooltip": "^4.2.21",
     "ui": "*"
   },
   "devDependencies": {
