--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,6 +16,7 @@
     "next": "latest",
     "postcss": "^8.4.14",
     "react": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "tailwindcss": "^3.1.2",
     "tsconfig": "*",
