Added mobile and 404 page

--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "build": "turbo run build",
     "build:lms": "turbo run build --filter=lms",
     "build:admin": "turbo run build --filter=admin",
+    "build:mobile": "turbo run build --filter=mobile",
     "clean": "turbo run clean --parallel && rimraf node_modules",
     "clean:cache": "turbo run clean:cache && rimraf node_modules/.cache",
     "dev": "turbo run dev --parallel",
     "dev:lms": "turbo run dev --filter=lms",
     "dev:admin": "turbo run dev --filter=admin",
+    "dev:mobile": "turbo run dev --filter=mobile",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "start": "turbo run start --parallel",
     "start:lms": "turbo run start --filter=lms",
     "start:admin": "turbo run start --filter=admin",
+    "start:mobile": "turbo run start --filter=mobile",
     "prepare": "husky install"
   },
   "devDependencies": {
