--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "db": "*",
+    "@lms/db": "*",
+    "@lms/ui": "*",
+    "compressorjs": "^1.1.1",
     "firebase": "^9.9.4",
     "next": "latest",
     "nprogress": "^0.2.0",
@@ -17,22 +19,21 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
-    "react-tooltip": "^4.2.21",
-    "ui": "*"
+    "react-tooltip": "^4.2.21"
   },
   "devDependencies": {
+    "@lms/config": "*",
+    "@lms/tsconfig": "*",
     "@tailwindcss/typography": "^0.5.4",
     "@types/node": "17.0.35",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.7",
-    "config": "*",
     "eslint": "8.23.0",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
-    "tsconfig": "*",
     "typescript": "4.7.2"
   }
 }
