--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "db",
+  "name": "@lms/db",
   "version": "0.0.0",
   "main": "./index.ts",
   "types": "./index.ts",
@@ -12,8 +12,8 @@
     "next": "latest"
   },
   "devDependencies": {
-    "config": "*",
-    "tsconfig": "*",
+    "@lms/config": "*",
+    "@lms/tsconfig": "*",
     "typescript": "^4.5.2"
   }
 }
