--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "@lms/ui",
   "version": "0.0.0",
   "main": "./index.tsx",
   "types": "./index.tsx",
@@ -14,14 +14,14 @@
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@lms/config": "*",
+    "@lms/tsconfig": "*",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.7",
     "eslint": "^7.32.0",
-    "config": "*",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
-    "tsconfig": "*",
     "typescript": "^4.5.2"
   }
 }
