--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -19,16 +19,19 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
     "react-tooltip": "^4.2.21"
   },
   "devDependencies": {
     "@lms/config": "*",
     "@lms/tsconfig": "*",
+    "@lms/types": "*",
     "@tailwindcss/typography": "^0.5.4",
     "@types/node": "17.0.35",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.7",
     "eslint": "8.23.0",
     "next-transpile-modules": "^9.0.0",
