--- a/apps/lms/package.json
+++ b/apps/lms/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@azure/msal-browser": "^2.28.3",
     "@azure/msal-react": "^1.4.7",
+    "@lms/db": "*",
     "@lms/ui": "*",
+    "algoliasearch": "^4.14.2",
     "firebase": "^9.9.4",
     "next": "latest",
     "next-seo": "^5.5.0",
@@ -21,16 +23,20 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
+    "react-instantsearch-dom": "^6.36.0",
+    "react-instantsearch-hooks-web": "^6.36.0",
     "react-tooltip": "^4.2.21"
   },
   "devDependencies": {
     "@lms/config": "*",
     "@lms/tsconfig": "*",
+    "@lms/types": "*",
     "@tailwindcss/typography": "^0.5.4",
     "@types/node": "17.0.35",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/react-instantsearch-dom": "^6.12.3",
     "autoprefixer": "^10.4.7",
     "eslint": "8.23.0",
     "next-transpile-modules": "^9.0.0",
