--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "next": "latest",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0"
   },
