--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint *.ts*"
   },
   "dependencies": {
+    "algoliasearch": "^4.14.2",
     "next": "latest",
     "react": "18.2.0",
     "react-hot-toast": "^2.4.0",
