Major fixes and tweaks

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ ui-debug.log
 firestore-debug.log
 firebase-debug.log
 .runtimeconfig.json
+pubsub-debug.log
+database-debug.log
+seed
+
+# configs
+sticalms-sa.json
+
