--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "algoliasearch": "^4.14.2",
     "firebase-admin": "^10.2.0",
-    "firebase-functions": "3.24.1"
+    "firebase-functions": "3.24.1",
+    "node-fetch-commonjs": "^3.2.4"
   },
   "devDependencies": {
     "typescript": "^4.6.4"
