--- a/apps/lms/package.json
+++ b/apps/lms/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "algoliasearch": "^4.14.2",
     "firebase": "^9.9.4",
+    "framer-motion": "^7.6.1",
     "next": "latest",
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.22",
