--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -14,7 +14,7 @@
     "algoliasearch": "^4.14.2",
     "compressorjs": "^1.1.1",
     "firebase": "^9.9.4",
-    "next": "latest",
+    "next": "12.3.2",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
