--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint *.ts*"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "12.3.2",
     "react": "18.2.0"
   },
   "devDependencies": {
