--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint *.ts*"
   },
   "dependencies": {
+    "@lms/db": "*",
+    "javascript-time-ago": "^2.5.9",
     "next": "12.3.2",
     "react": "18.2.0"
   },
