--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.4.0",
     "react-instantsearch-hooks-web": "^6.36.0",
     "react-modal": "^3.15.1",
+    "react-select": "^5.7.0",
     "react-tooltip": "^4.2.21"
   },
   "devDependencies": {
