--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -25,6 +25,7 @@
     "react-instantsearch-hooks-web": "^6.36.0",
     "react-modal": "^3.15.1",
     "react-select": "^5.7.0",
+    "react-to-print": "^2.14.11",
     "react-tooltip": "^4.2.21"
   },
   "devDependencies": {
