--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -15,6 +15,7 @@
     "compressorjs": "^1.1.1",
     "firebase": "^9.9.4",
     "next": "12.3.2",
+    "nodemailer": "^6.9.0",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-datepicker": "^4.8.0",
@@ -34,6 +35,7 @@
     "@lms/types": "*",
     "@tailwindcss/typography": "^0.5.4",
     "@types/node": "17.0.35",
+    "@types/nodemailer": "^6.4.7",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.17",
     "@types/react-datepicker": "^4.8.0",
