--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@emailjs/nodejs": "^2.1.1",
     "algoliasearch": "^4.14.2",
     "firebase-admin": "^10.2.0",
     "firebase-functions": "3.24.1",
