--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -19,6 +19,7 @@
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-datepicker": "^4.8.0",
+    "react-datetime-picker": "^4.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
@@ -39,6 +40,7 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.17",
     "@types/react-datepicker": "^4.8.0",
+    "@types/react-datetime-picker": "^3.4.1",
     "@types/react-dom": "18.0.6",
     "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.7",
